--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
 		<link rel="stylesheet" href="assets/css/style.dev.css">
-		<title></title>
+		<title>lovetravelkorea</title>
 	</head>
 
 
@@ -85,87 +85,87 @@
 	</div>
 	<div class="holist">
 		<ul>
-			<li class="hotel1" ><img src="assets/images/hotel1.jpg"  class="hoimage"alt="">
+			<li class="hotel1" ><img src="assets/images/hotel1.jpg"  class="hoimage"alt="hoimage">
 				<p class="honame">Nine Tree Premier Hotel Myeong dong</p>
 				<p class="seemore"><strong>see more photo</strong></p>
 					<div class="viewgroup">
 						<p  class="hotel1_1"><a class="view">view</a> <br /></p>
 					</div>
 							<div class="starcollect">
-								<p  class="star"><img src="assets/images/star.png" alt=""></p>
-								<p  class="star2"><img src="assets/images/star.png" alt=""></p>
-								<p  class="star3"><img src="assets/images/star.png" alt=""></p>
-								<p  class="star4"><img src="assets/images/blackstar.png" alt=""></p>
+								<p  class="star"><img src="assets/images/star.png" alt="star"></p>
+								<p  class="star2"><img src="assets/images/star.png" alt="star"></p>
+								<p  class="star3"><img src="assets/images/star.png" alt="star"></p>
+								<p  class="star4"><img src="assets/images/blackstar.png" alt="star"></p>
 							</div>
 								<h1 class="hoprice">$308</h1>
 			</li>
-			<li class="hotel2"><img src="assets/images/hotel2.jpg"  class="hoimage" alt="">
+			<li class="hotel2"><img src="assets/images/hotel2.jpg"  class="hoimage" alt="hoimage">
 				<p class="honame">Ramada Encore Seoul Dongdaemun Hotel</p>
 				<p class="seemore"><strong>see more photo</strong></p>
 					<div class="viewgroup">
 						<p  class="hotel1_1"><a class="view">view</a> <br /></p>
 					</div>
 						<div class="starcollect">
-							<p  class="star"><img src="assets/images/star.png" alt=""></p>
-							<p  class="star2"><img src="assets/images/star.png" alt=""></p>
-							<p  class="star3"><img src="assets/images/star.png" alt=""></p>
-							<p  class="star4"><img src="assets/images/star.png" alt=""></p>
+							<p  class="star"><img src="assets/images/star.png" alt="star"></p>
+							<p  class="star2"><img src="assets/images/star.png" alt="star"></p>
+							<p  class="star3"><img src="assets/images/star.png" alt="star"></p>
+							<p  class="star4"><img src="assets/images/star.png" alt="star"></p>
 						</div>
 							<h1 class="hoprice">$508</h1>
 			</li>
-			<li class="hotel3"><img src="assets/images/hotel3.jpg" class="hoimage" alt="">
+			<li class="hotel3"><img src="assets/images/hotel3.jpg" class="hoimage" alt="hoimage">
 				<p class="honame">Grand Hyatt Seoul</p>
 				<p class="seemore"><strong>see more photo</strong></p>
 					<div class="viewgroup">
 						<p  class="hotel1_1"><a class="view">view</a> <br /></p>
 					</div>
 						<div class="starcollect">
-							<p  class="star"><img src="assets/images/star.png" alt=""></p>
-							<p  class="star2"><img src="assets/images/star.png" alt=""></p>
-							<p  class="star3"><img src="assets/images/star.png" alt=""></p>
-							<p  class="star4"><img src="assets/images/blackstar.png" alt=""></p>
+							<p  class="star"><img src="assets/images/star.png" alt="star"></p>
+							<p  class="star2"><img src="assets/images/star.png" alt="star"></p>
+							<p  class="star3"><img src="assets/images/star.png" alt="star"></p>
+							<p  class="star4"><img src="assets/images/blackstar.png" alt="star"></p>
 						</div>
 							<h1 class="hoprice">$380</h1>
 			</li><br />
-			<li class="hotel4"><img src="assets/images/hotel4.jpg" class="hoimage" alt="">
+			<li class="hotel4"><img src="assets/images/hotel4.jpg" class="hoimage" alt="hoimage">
 				<p class="honame">Hotel Peyto Gangnam</p>
 				<p class="seemore"><strong>see more photo</strong></p>
 					<div class="viewgroup">
 						<p  class="hotel1_1"><a class="view">view</a> <br /></p>
 					</div>
 						<div class="starcollect">
-							<p  class="star"><img src="assets/images/star.png" alt=""></p>
-							<p  class="star2"><img src="assets/images/star.png" alt=""></p>
-							<p  class="star3"><img src="assets/images/star.png" alt=""></p>
-							<p  class="star4"><img src="assets/images/star.png" alt=""></p>
+							<p  class="star"><img src="assets/images/star.png" alt="star"></p>
+							<p  class="star2"><img src="assets/images/star.png" alt="star"></p>
+							<p  class="star3"><img src="assets/images/star.png" alt="star"></p>
+							<p  class="star4"><img src="assets/images/star.png" alt="star"></p>
 						</div>
 							<h1 class="hoprice">$400</h1>
 			</li>
-			<li class="hotel5"><img src="assets/images/hotel5.jpg" class="hoimage" alt="">
+			<li class="hotel5"><img src="assets/images/hotel5.jpg" class="hoimage" alt="hoimage">
 				<p class="honame">Casaville Shinchon Residence</p>
 				<p class="seemore"><strong>see more photo</strong></p>
 					<div class="viewgroup">
 						<p  class="hotel1_1"><a class="view">view</a> <br /></p>
 					</div>
 						<div class="starcollect">
-							<p  class="star"><img src="assets/images/star.png" alt=""></p>
-							<p  class="star2"><img src="assets/images/star.png" alt=""></p>
-							<p  class="star3"><img src="assets/images/star.png" alt=""></p>
-							<p  class="star4"><img src="assets/images/blackstar.png" alt=""></p>
+							<p  class="star"><img src="assets/images/star.png" alt="star"></p>
+							<p  class="star2"><img src="assets/images/star.png" alt="star"></p>
+							<p  class="star3"><img src="assets/images/star.png" alt="star"></p>
+							<p  class="star4"><img src="assets/images/blackstar.png" alt="star"></p>
 						</div>
 							<h1 class="hoprice">$320</h1>
 			</li>
-			<li class="hotel6"><img src="assets/images/hotel6.jpg" class="hoimage" alt="">
+			<li class="hotel6"><img src="assets/images/hotel6.jpg" class="hoimage" alt="hoimage">
 				<p class="honame">Orakai Insadong Suites</p>
 				<p class="seemore"><strong>see more photo</strong></p>
 					<div class="viewgroup">
 						<p  class="hotel1_1"><a class="view">view</a> <br /></p>
 					</div>
 						<div class="starcollect">
-							<p  class="star"><img src="assets/images/star.png" alt=""></p>
-							<p  class="star2"><img src="assets/images/star.png" alt=""></p>
-							<p  class="star3"><img src="assets/images/blackstar.png" alt=""></p>
-							<p  class="star4"><img src="assets/images/blackstar.png" alt=""></p>
+							<p  class="star"><img src="assets/images/star.png" alt="star"></p>
+							<p  class="star2"><img src="assets/images/star.png" alt="star"></p>
+							<p  class="star3"><img src="assets/images/blackstar.png" alt="star"></p>
+							<p  class="star4"><img src="assets/images/blackstar.png" alt="star"></p>
 						</div>
 							<h1 class="hoprice">$220</h1>
 			</li>
@@ -224,8 +224,8 @@
 	<div class="carlist">
 		<div class="car_1">
 			<ul>
-				<li class="car1"><img src="assets/images/car1.jpg" alt=""><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<img src="assets/images/si.png" alt=""></li>
+				<li class="car1"><img src="assets/images/car1.jpg" alt="car1"><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<img src="assets/images/si.png" alt="car1"></li>
 			</ul>
 		</div>
 			<div class="bonmun">
@@ -255,8 +255,8 @@
 		<div class="car_2">
 			<ul>
 				<li class="car2" style="margin-top: 124px;">
-					<img src="assets/images/car2.jpg" alt=""><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<img src="assets/images/si.png" alt=""></li>
+					<img src="assets/images/car2.jpg" alt="car2"><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<img src="assets/images/si.png" alt="car2"></li>
 			</ul>
 		</div>
 		 <div class="bonmun">
@@ -286,8 +286,8 @@
 		<div class="car_2">
 			<ul>
 				<li class="car2">
-					<img src="assets/images/car3.jpg" alt=""><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<img src="assets/images/si.png" alt=""></li>
+					<img src="assets/images/car3.jpg" alt="car2"><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<img src="assets/images/si.png" alt="car2"></li>
 			</ul>
 		</div>
 			<div class="bonmun">
@@ -317,8 +317,8 @@
 	<div class="carlist">
 		<div class="car_4">
 			<ul>
-				<li class="car1"><img src="assets/images/car4.jpg" alt=""><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-					<img src="assets/images/si.png" alt=""></li>
+				<li class="car1"><img src="assets/images/car4.jpg" alt="car1"><br />&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<img src="assets/images/si.png" alt="car1"></li>
 			</ul>
 		</div>
 			<div class="bonmun">
