--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
 <!-- 슬라이드 -->
 
 <div class="w3-content w3-display-container" style="margin-top:170px;"  >
-  <img class="mySlides" src="assets/images/seoul.jpg" >
-  <img class="mySlides" src="assets/images/jeju.jpg" >
-  <img class="mySlides" src="assets/images/busan.jpg">
+  <img class="mySlides" src="assets/images/seoul.jpg"  alt="mySlides">
+  <img class="mySlides" src="assets/images/jeju.jpg" alt="mySlides">
+  <img class="mySlides" src="assets/images/busan.jpg"alt="mySlides">
 		<button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)" >&#10094;</button>
 		<button class="w3-button w3-black w3-display-right" onclick="plusDivs(-1)">&#10095;</button>
 			<h1 class="amazing">AMAZING KOREA TRAVEL</h1>
